--- a/views/email/baseEmail.pug
+++ b/views/email/baseEmail.pug
@@ -36,8 +36,6 @@ html
                   tbody
                     tr
                       td.content-block
-                        span.apple-link Natours Inc, 123 Nowhere Road, San Francisco CA 99999
-                        br
-                        |  Don't like these emails? 
-                        a(href='#') Unsubscribe
+                        span.apple-link Ottawa, Canada
+                        
           //- td  
